--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.hibernate.ddl-auto = update
 #mongo properties
 spring.data.mongodb.database=tomatoDb
 spring.data.mongodb.uri=mongodb+srv://prajapatiraghulal:mongodb123@cluster0.qrsql.mongodb.net/?retryWrites=true&w=majority
+
+spring.session.store-type=jdbc
