--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,16 @@
 server.port=9900
 
-spring.datasource.url=jdbc:mysql://localhost:3306/trainingDb
-spring.datasource.username=root
-spring.datasource.password=mysql@123
+#spring.datasource.url=jdbc:mysql://localhost:3306/trainingDb
+spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6509146
+#spring.datasource.username=root
+spring.datasource.username=sql6509146
+
+#spring.datasource.password=mysql@123
+spring.datasource.password=sgSS7NXxRU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-#postgre properties
-#spring.datasource.url=jdbc:postgresql://localhost:5433/springbootjpa
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-#spring.jpa.show-sql=true
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
-#org.hibernate.dialect.MySQL5Dialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
-
 
 #mongo properties
 spring.data.mongodb.database=tomatoDb
