--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
         <version>2.4.0</version>
     </parent>
     <build>
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--            </plugin>-->
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
 
-<!--        </plugins>-->
+        </plugins>
     </build>
     <dependencies>
         <dependency>
