--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #server.port=9900
-server.port=${PORT:8080}
+server.port=${PORT:6969}
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/trainingdb
-spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6509146
-#spring.datasource.username=root
-spring.datasource.username=sql6509146
+spring.datasource.url=jdbc:mysql://localhost:3306/trainingdb
+#spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6509146
+spring.datasource.username=root
+#spring.datasource.username=sql6509146
 
-#spring.datasource.password=root
-spring.datasource.password=sgSS7NXxRU
+spring.datasource.password=root
+#spring.datasource.password=sgSS7NXxRU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
